# color-ticket-simulator

./: README.md  fix_runpred.py  fix_safeinvoke.py  index.html  new_predict.rs  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
